[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/Lobby.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NetworkSetupScreen/NameEdit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "invalid_username"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("NetworkSetupScreen/NameEdit:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Lobby" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -84.0
margin_right = 104.0
margin_bottom = 84.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="NetworkSetupScreen" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NameEdit" type="LineEdit" parent="NetworkSetupScreen"]
unique_name_in_owner = true
margin_right = 208.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
max_length = 32
placeholder_text = "enter name here"

[node name="PlayerList" type="ItemList" parent="NetworkSetupScreen"]
unique_name_in_owner = true
margin_top = 17.0
margin_right = 208.0
margin_bottom = 123.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ServerList" type="OptionButton" parent="NetworkSetupScreen"]
unique_name_in_owner = true
margin_top = 124.0
margin_right = 208.0
margin_bottom = 137.0
text = "Dojo 1 (NY)"
items = [ "Dojo 1 (NY)", null, false, 0, null, "Dojo 2 (LA)", null, false, 1, null, "Dojo 3 (EU)", null, false, 3, null, "Local Dojo (coming soon)", null, true, 4, null ]
selected = 0

[node name="ActivePlayers" type="RichTextLabel" parent="NetworkSetupScreen/ServerList"]
unique_name_in_owner = true
self_modulate = Color( 1, 1, 1, 0.592157 )
margin_left = 69.0
margin_right = 192.0
margin_bottom = 14.0
mouse_filter = 2
bbcode_enabled = true

[node name="RoomCodeDisplay" type="LineEdit" parent="NetworkSetupScreen"]
unique_name_in_owner = true
visible = false
margin_top = 126.0
margin_right = 208.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 20 )
align = 1
editable = false

[node name="ConnectContainer" type="HBoxContainer" parent="NetworkSetupScreen"]
unique_name_in_owner = true
margin_top = 138.0
margin_right = 208.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 30 )

[node name="HostContainer" type="HBoxContainer" parent="NetworkSetupScreen/ConnectContainer"]
unique_name_in_owner = true
margin_right = 50.0
margin_bottom = 30.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NetworkSetupScreen/ConnectContainer/HostContainer"]
margin_right = 50.0
margin_bottom = 30.0

[node name="HostButton" type="Button" parent="NetworkSetupScreen/ConnectContainer/HostContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 50.0
margin_bottom = 17.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "host"

[node name="PublicButton" type="CheckButton" parent="NetworkSetupScreen/ConnectContainer/HostContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 18.0
margin_right = 50.0
margin_bottom = 30.0
pressed = true
text = "public"

[node name="JoinContainer" type="HBoxContainer" parent="NetworkSetupScreen/ConnectContainer"]
unique_name_in_owner = true
margin_left = 51.0
margin_right = 208.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JoinButton" type="Button" parent="NetworkSetupScreen/ConnectContainer/JoinContainer"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 30.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3
text = "join"

[node name="IPEdit" type="LineEdit" parent="NetworkSetupScreen/ConnectContainer/JoinContainer"]
unique_name_in_owner = true
margin_left = 41.0
margin_right = 79.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.46
text = "127.0.0.1"
placeholder_text = "IP"

[node name="RoomCodeEdit" type="LineEdit" parent="NetworkSetupScreen/ConnectContainer/JoinContainer"]
unique_name_in_owner = true
margin_left = 80.0
margin_right = 118.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.46
placeholder_text = "Room Code"

[node name="PortEdit" type="LineEdit" parent="NetworkSetupScreen/ConnectContainer/JoinContainer"]
unique_name_in_owner = true
margin_left = 119.0
margin_right = 157.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "52450"
placeholder_text = "port"

[node name="NetworkStartButton" type="Button" parent="NetworkSetupScreen"]
unique_name_in_owner = true
visible = false
margin_top = 148.0
margin_right = 208.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.45
text = "start"

[node name="NetworkErrorLabel" type="Label" parent="."]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
margin_left = 168.0
margin_top = 168.0
margin_right = 208.0
margin_bottom = 180.0
size_flags_horizontal = 0
text = "go back"

[node name="DirectConnectWarning" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 87.0
margin_right = 61.0
margin_bottom = 145.0
text = "note: host may need to port-forward for direct connect to work"
align = 1
autowrap = true

[node name="ConnectingLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -5.5
margin_right = 55.0
margin_bottom = 5.5
text = "Connecting to server..."

[node name="RefreshTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="MatchmakingDisabledLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -95.5
margin_right = 104.0
margin_bottom = -84.5
text = "public lobbies disabled in unstable version"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/invalid_username = SubResource( 2 )
